# jarvis-vo3

./: .replit  app.py  presentation.html  pyproject.toml  replit.md
.streamlit/: config.toml
components/: ai_analyzer.py  database_handler.py  file_handler.py  image_ocr_handler.py  log_analyzer.py  realtime_monitor.py  simple_war_room_agent.py  war_room_agent.py  xml_parser.py
config/: settings.py
utils/: cache.py  log_parser.py  logger.py  performance.py  security.py
