[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pyodbc>=5.2.0",
    "streamlit>=1.47.0",
    "trafilatura>=2.0.0",
    "duckduckgo-search>=8.1.1",
    "beautifulsoup4>=4.13.4",
    "markdown>=3.8.2",
    "ddgs>=9.4.3",
]
